--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "CI=false react-scripts build",
+    "build": "REACT_APP_API_URL=$API_URL react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
